# markdown-editor

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  PKGBUILD  README.md  SECURITY.md  pyproject.toml  requirements.txt
.gitea/workflows/: package.yaml  quality.yaml
.github/: pull_request_template.md
.github/workflows/: package.yaml  quality.yaml
assets/: markdown-editor.desktop
docs/: CONTRIBUTING.md  layout.md  learnings.md  plan.md  requirements.md
src/mdeditor/: logger.py  main.py
src/mdeditor/markdown/: loader.py  renderer.py  saver.py
src/mdeditor/ui/: editor.py  header_bar.py  preview.py  status_bar.py  window.py
src/mdeditor/ui/styles/: markdown-editor-dark.xml  preview-dark.css  preview-light.css
tests/: test.md  test_editor.py  test_header_bar.py  test_loader.py  test_logger.py  test_main.py  test_pdf_export.py  test_preview.py  test_renderer.py  test_saver.py  test_status_bar.py  test_window.py
